Добавлена поддержка microwire(ch341)

--- a/software/AsProgrammer.lpi
+++ b/software/AsProgrammer.lpi
@@ -24,8 +24,8 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
       <MinorVersionNr Value="3"/>
-      <RevisionNr Value="3"/>
-      <BuildNr Value="7"/>
+      <RevisionNr Value="8"/>
+      <BuildNr Value="2"/>
       <Language Value="0419"/>
       <StringTable ProductVersion=""/>
     </VersionInfo>
@@ -103,7 +103,7 @@
         <PackageName Value="LCL"/>
       </Item4>
     </RequiredPackages>
-    <Units Count="9">
+    <Units Count="10">
       <Unit0>
         <Filename Value="AsProgrammer.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -146,8 +146,13 @@
         <Filename Value="sregedit.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="sregeditForm"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit8>
+      <Unit9>
+        <Filename Value="ch341mw.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit9>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
