--- a/firmware/AVRISP-MKII/makefile
+++ b/firmware/AVRISP-MKII/makefile
@@ -19,7 +19,7 @@ F_USB        = $(F_CPU)
 OPTIMIZATION = 3
 TARGET       = AVRISP-MKII
 SRC          = $(TARGET).c AVRISPDescriptors.c Lib/V2Protocol.c Lib/V2ProtocolParams.c Lib/ISP/ISPProtocol.c Lib/ISP/ISPTarget.c Lib/XPROG/XPROGProtocol.c \
-               Lib/XPROG/XPROGTarget.c Lib/XPROG/XMEGANVM.c Lib/XPROG/TINYNVM.c Lib/spi25.c Lib/i2c.c $(LUFA_SRC_USB)
+               Lib/XPROG/XPROGTarget.c Lib/XPROG/XMEGANVM.c Lib/XPROG/TINYNVM.c Lib/spi25.c Lib/i2c.c Lib/microwire.c $(LUFA_SRC_USB)
 LUFA_PATH    = ../../LUFA
 CC_FLAGS     = -DUSE_LUFA_CONFIG_HEADER -IConfig/
 LD_FLAGS     =
