Исходники usbasp приведены к оригиналу с компиляцией через Makefile V-USB обновлен до последней версии с гитхаба Исправлены проблемы с #define F_CPU

--- a/firmware/usbasp/Makefile
+++ b/firmware/usbasp/Makefile
@@ -37,9 +37,9 @@ help:
 	@echo "       ISP=${ISP}"
 	@echo "       PORT=${PORT}"
 
-COMPILE = avr-gcc -Wall -O2 -Iusbdrv -I. -mmcu=$(TARGET) # -DDEBUG_LEVEL=2
+COMPILE = avr-gcc -Wall -Os -Iusbdrv -I. -mmcu=$(TARGET) # -DDEBUG_LEVEL=2
 
-OBJECTS = usbdrv/usbdrv.o usbdrv/usbdrvasm.o usbdrv/oddebug.o isp.o clock.o tpi.o main.o
+OBJECTS = usbdrv/usbdrv.o usbdrv/usbdrvasm.o usbdrv/oddebug.o isp.o clock.o tpi.o main.o i2c.o microwire.o
 
 .c.o:
 	$(COMPILE) -c $< -o $@
