--- a/firmware/AVRISP-MKII/makefile
+++ b/firmware/AVRISP-MKII/makefile
@@ -11,9 +11,9 @@
 
 # Run "make help" for target help.
 
-MCU          = at90usb1286
+MCU          = at90usb162
 ARCH         = AVR8
-BOARD        = TEENSY2
+BOARD        = USBTINYMKII
 F_CPU        = 16000000
 F_USB        = $(F_CPU)
 OPTIMIZATION = 3
